# fastapi

./: README.md  docker-compose.yaml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile
frontend/static/: create_job.css  create_job.html  dashboard.css  edit.css  edit.html  index.html  view.css  view.html
